# manuale-poliamore-milano

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
0.1/: 404.html  index.html  sitemap.xml
0.1/carta_dei_valori/: index.html
0.1/events/aperitivo_antispecista/: index.html
0.1/events/cerchio_di_confronto/: index.html
0.1/events/poli_aperitivo/: index.html
0.1/gruppo_telegram/: index.html
0.1/regolamento/: index.html
0.1/search/: search_index.json
0.1/segnalazioni/: index.html
carta_dei_valori/: index.html
docs/: carta_dei_valori.md  gruppo_telegram.md  index.md  segnalazioni.md
docs/assets/stylesheets/: extra.css
docs/events/: poli_aperitivo.md
docs/manuale/: benvenute.md  meta_manuale.md
events/aperitivo_antispecista/: index.html
events/cerchio_di_confronto/: index.html
events/poli_aperitivo/: index.html
gruppo_telegram/: index.html
manuale/benvenute/: index.html
manuale/meta_manuale/: index.html
regolamento/: index.html
search/: search_index.json
segnalazioni/: index.html
